# api

./: README.md  pyproject.toml
data/: compras.json  product.csv
src/: api.py  consumer.py
