[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Analista Oficial",email = "analista.oficial@outlook.com"}
]
readme = "README.md"
requires-python = "3.10.1"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "faker (>=33.3.1,<34.0.0)",
    "fastapi[all] (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
